--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -13,11 +13,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <title>SAFE</title>
-    <script>
-      window.onload = function() {
-        window.alert("모바일 접속시 화면이 깨질 수 있습니다. \nPC접속 부탁드립니다");
-      };
-    </script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
